--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 html,
 body {
   overflow-x: hidden;
+  scrollbar-width: none;
 }
 
 body {
@@ -16,36 +17,28 @@ body {
   font-family: "Inter", Arial, sans-serif;
 }
 
-.progressbar-wrapper {
-  position: fixed;
-  top: 0;
-  background-color: #f3f3f1;
-  color: white;
-  width: 100%;
-  z-index: 100;
-}
-
-.progressbar {
-  background-color: black;
-  padding: 2px;
-  width: 15%;
-}
-
-.header {
-  display: flex;
-  margin-top: 2rem;
-  height: 40px;
-}
-
 .container-header {
+  position: fixed;
   width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  z-index: 100;
+  background-color: transparent;
+}
+
+#progress-bar {
+  --progress: 0;
+  background-color: black;
+  height: 4px;
+  width: var(--progress);
+}
+
+.header-bottom {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1rem;
-  position: fixed;
-  z-index: 100;
-  background-color: transparent;
+  padding: 2rem 1rem;
 }
 
 .container {
@@ -122,37 +115,53 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-.section {
-  padding: 5rem 1rem;
+.hero-section {
+  margin: 5rem 0.5rem;
+  padding-top: 4rem;
 }
 
-.title-container {
-  padding-bottom: 5rem;
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-h1 {
+.wrapper {
+  margin: 0 auto;
+}
+
+.hero-text {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
   color: #262625;
   font-weight: 600;
-  font-size: 4.6rem;
-  line-height: 90px;
+  font-size: 74px;
+}
+
+.block-1 {
+  grid-area: 1 / 1 / 2 / 2;
+  display: flex;
+  height: 90px;
+}
+.block-2 {
+  padding-left: 1.5rem;
+}
+.block-3 {
+  grid-area: 2 / 1 / 2 / 2;
+}
+.block-4 {
+  grid-area: 3 / 1 / 3 / 3;
 }
 
 .italic {
   font-style: italic;
 }
 
-.title-badge {
-  position: absolute;
-  top: 150px;
-  left: 255px;
-  width: 110px;
-}
-
 .playing-card-container {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-top: 4rem;
 }
 
 .playing-card {
@@ -251,9 +260,9 @@ h1 {
 .scroll-paragraph {
   display: inline-block;
   white-space: nowrap;
-  font-size: 11rem;
+  font-size: 174px;
   font-weight: 600;
-  animation: scroll-horizontal 30s linear infinite;
+  animation: scroll-horizontal 20s linear infinite;
 }
 
 @keyframes scroll-horizontal {
@@ -457,13 +466,11 @@ h1 {
 }
 
 .footer {
-  display: flex;
   margin-top: 2rem;
-  height: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 3rem;
+  padding: 3rem 1rem;
 }
 
 .date {
@@ -471,4 +478,54 @@ h1 {
   font-size: 12px;
   font-weight: 700;
   line-height: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-section {
+    margin: 8rem 0.5rem;
+  }
+
+  .hero-container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .playing-card-container {
+    margin-top: 0;
+  }
+
+  .wrapper {
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero-text {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-content: flex-start;
+  }
+  .block-1 {
+    display: block;
+  }
+  .block-2 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .block-3 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  .block-4 {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+
+  .block-3 span {
+    margin-left: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-text {
+    font-size: 115px;
+  }
 }
