--- a/style.css
+++ b/style.css
@@ -101,7 +101,6 @@ body {
   left: 3px;
   bottom: 2.5px;
   background-color: white;
-  -webkit-transition: 0.4s;
   transition: 0.6s ease;
   border-radius: 50%;
   background-image: url("/assets/toggle.svg");
@@ -110,8 +109,6 @@ body {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
 
@@ -260,7 +257,7 @@ input:checked + .slider:before {
 .scroll-paragraph {
   display: inline-block;
   white-space: nowrap;
-  font-size: 174px;
+  font-size: 180px;
   font-weight: 600;
   animation: scroll-horizontal 20s linear infinite;
 }
@@ -272,6 +269,26 @@ input:checked + .slider:before {
   100% {
     transform: translateX(-100%);
   }
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.balise {
+  rotate: -35deg;
+  margin: 0 1rem;
+}
+
+.smiley {
+  rotate: -20deg;
+  margin-top: 2rem;
+  margin-left: 1.5rem;
+}
+
+.balise,
+.smiley {
+  vertical-align: middle;
 }
 
 .card-section {
@@ -432,6 +449,8 @@ input:checked + .slider:before {
 }
 
 .button {
+  position: relative;
+  cursor: pointer;
   background-color: #f3f3f1;
   color: #262625;
   border-radius: 30px;
@@ -442,6 +461,11 @@ input:checked + .slider:before {
   width: 178px;
   height: 58px;
   z-index: 1;
+}
+
+.button:hover,
+.button-:focus {
+  background-color: #ffffff;
 }
 
 .v1 {
@@ -515,17 +539,30 @@ input:checked + .slider:before {
   .block-3 {
     grid-area: 1 / 2 / 2 / 3;
   }
-  .block-4 {
-    grid-area: 2 / 2 / 3 / 3;
-  }
-
   .block-3 span {
     margin-left: 1.5rem;
+  }
+
+  .block-4 {
+    grid-area: 2 / 2 / 3 / 3;
+    position: relative;
+  }
+  .block-4 span {
+    position: absolute;
+    transform: translateX(-20%);
+  }
+
+  .title-badge {
+    rotate: -20deg;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .hero-text {
     font-size: 115px;
+  }
+
+  .block-4 span {
+    transform: translateX(-35%);
   }
 }
