--- a/style.css
+++ b/style.css
@@ -20,11 +20,7 @@ body {
 .container-header {
   position: fixed;
   width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
   z-index: 100;
-  background-color: transparent;
 }
 
 #progress-bar {
@@ -242,7 +238,7 @@ input:checked + .slider:before {
 
 .scroll-container {
   position: relative;
-  margin-bottom: 6rem;
+  margin-bottom: 5rem;
   width: 100%;
   overflow: hidden;
   mask: linear-gradient(
@@ -270,6 +266,7 @@ input:checked + .slider:before {
     transform: translateX(-100%);
   }
 }
+
 .flex {
   display: flex;
   align-items: center;
@@ -291,77 +288,121 @@ input:checked + .slider:before {
   vertical-align: middle;
 }
 
-.card-section {
+.cards-section {
+  padding: 0 1rem;
+}
+
+.cards-container {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+  height: 700px;
   overflow-y: auto;
-  height: 600px;
   scrollbar-width: none;
 }
 
-.card-container {
+.card {
   position: sticky;
   top: 0;
-  margin: 0 auto;
-}
-
-.card {
-  width: 366px;
-  height: 600px;
+  height: 700px;
+  background-color: #f0f0ff;
   border-radius: 60px;
+  overflow: hidden;
+  max-width: 800px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  padding: 40px;
 }
 
 .card-header {
+  padding: 20px;
   display: flex;
-  padding: 2.5rem;
-  color: #262625;
 }
 
-.card-header h5 {
-  padding-left: 1.5rem;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 20px;
-}
-
-.card-header p {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 20px;
-  opacity: 0.8;
-}
-
-.card-body {
+.card-notation {
   display: flex;
   flex-direction: column;
-  padding: 0 2.5rem;
-}
-
-.card-body p {
+  color: #262625;
+  opacity: 80%;
   font-weight: 500;
-  font-size: 12px;
-  line-height: 20px;
-  opacity: 0.5;
-  padding-top: 1rem;
+  gap: 10px;
 }
 
-.card-body span {
+.card-name {
   font-weight: 700;
+  padding-left: 2rem;
 }
 
-.card-footer {
+.card-subtitle {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 0 20px;
+}
+
+.card-content {
+  display: flex;
+  padding: 0 20px 20px;
+}
+
+.card-image-container {
+  flex: 2;
+  position: relative;
+}
+
+.card-image {
   width: 100%;
-  overflow: hidden;
+  height: auto;
+  border-radius: 20px;
 }
 
-.card-footer img {
+.card-cursor {
   position: absolute;
-  bottom: 0;
+  top: -40px;
   right: 0;
-  border-radius: 0 0 60px 0;
+  padding: 5px 10px;
+  border-radius: 16px;
+  font-size: 14px;
+  color: white;
 }
+
+.card-description {
+  flex: 1;
+  padding-left: 20px;
+}
+
+.card-text {
+  font-size: 14px;
+  color: #262625;
+  line-height: 20px;
+  opacity: 60%;
+}
+
+.card-text:first-child {
+  margin-bottom: 2rem;
+}
+
+.card-sticker {
+  position: relative;
+}
+
+@media (max-width: 768px) {
+  .card-content {
+    flex-direction: column;
+  }
+
+  .card-description {
+    padding-left: 0;
+    padding-top: 20px;
+  }
+
+  .card-cursor {
+    top: 10px;
+    right: 10px;
+  }
+}
+
+/* 
 
 .cursor-1 {
   top: 6rem;
@@ -487,7 +528,7 @@ input:checked + .slider:before {
   top: 7rem;
   left: 225px;
   z-index: 2;
-}
+} */
 
 .footer {
   margin-top: 2rem;
@@ -522,6 +563,52 @@ input:checked + .slider:before {
   .wrapper {
     margin: 0;
   }
+
+  /* .cards-container {
+    width: 100%;
+    height: 460px;
+  }
+
+  .card {
+    width: 100%;
+    height: 460px;
+  }
+
+  .card-header {
+    margin-left: 2.5rem;
+  }
+
+  .card-header h5 {
+    margin-left: 3rem;
+  }
+
+  .card-body {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+
+  .img-body {
+    grid-area: 1 / 1 / 3 / 3;
+    margin: 0 1rem;
+  }
+  .text-body {
+    grid-area: 1 / 3 / 3 / 4;
+  }
+
+  .card-footer {
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .card-footer img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-radius: 0 0 60px 0;
+  } */
 }
 
 @media screen and (min-width: 1024px) {
@@ -547,6 +634,7 @@ input:checked + .slider:before {
     grid-area: 2 / 2 / 3 / 3;
     position: relative;
   }
+
   .block-4 span {
     position: absolute;
     transform: translateX(-20%);
