--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 #progress-bar {
   --progress: 0;
-  background-color: black;
+  background-color: #262625;
   height: 4px;
   width: var(--progress);
 }
@@ -49,7 +49,7 @@ body {
   text-align: center;
   font-weight: 700;
   font-size: 12px;
-  color: #ebedff;
+  color: #fefefe;
   background-color: #262625;
   padding: 6px 12px;
   border-radius: 1rem;
@@ -96,7 +96,7 @@ body {
   width: 23px;
   left: 3px;
   bottom: 2.5px;
-  background-color: white;
+  background-color: #fefefe;
   transition: 0.6s ease;
   border-radius: 50%;
   background-image: url("/assets/toggle.svg");
@@ -289,12 +289,13 @@ input:checked + .slider:before {
 }
 
 .cards-section {
-  padding: 0 1rem;
+  display: flex;
+  justify-content: center;
 }
 
 .cards-container {
   position: relative;
-  height: 700px;
+  height: 600px;
   overflow-y: auto;
   scrollbar-width: none;
 }
@@ -302,20 +303,18 @@ input:checked + .slider:before {
 .card {
   position: sticky;
   top: 0;
-  height: 700px;
-  background-color: #f0f0ff;
+  height: 100%;
   border-radius: 60px;
   overflow: hidden;
-  max-width: 800px;
   width: 100%;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   font-size: 12px;
-  padding: 40px;
 }
 
 .card-header {
-  padding: 20px;
+  padding: 1.5rem 3.5rem;
   display: flex;
 }
 
@@ -341,38 +340,33 @@ input:checked + .slider:before {
 }
 
 .card-content {
-  display: flex;
-  padding: 0 20px 20px;
-}
-
-.card-image-container {
-  flex: 2;
-  position: relative;
-}
-
-.card-image {
-  width: 100%;
-  height: auto;
-  border-radius: 20px;
-}
-
-.card-cursor {
-  position: absolute;
-  top: -40px;
-  right: 0;
-  padding: 5px 10px;
-  border-radius: 16px;
-  font-size: 14px;
-  color: white;
+  padding: 0 3rem;
+  min-height: 400px;
 }
 
 .card-description {
-  flex: 1;
-  padding-left: 20px;
+  margin-top: 10px;
+}
+
+.card-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.card-cursor-1 {
+  position: absolute;
+  top: 4rem;
+  right: 1rem;
+}
+
+.card-cursor-2 {
+  position: absolute;
+  top: 8rem;
+  right: 1rem;
 }
 
 .card-text {
-  font-size: 14px;
+  font-size: 12px;
   color: #262625;
   line-height: 20px;
   opacity: 60%;
@@ -380,38 +374,6 @@ input:checked + .slider:before {
 
 .card-text:first-child {
   margin-bottom: 2rem;
-}
-
-.card-sticker {
-  position: relative;
-}
-
-@media (max-width: 768px) {
-  .card-content {
-    flex-direction: column;
-  }
-
-  .card-description {
-    padding-left: 0;
-    padding-top: 20px;
-  }
-
-  .card-cursor {
-    top: 10px;
-    right: 10px;
-  }
-}
-
-/* 
-
-.cursor-1 {
-  top: 6rem;
-  right: 1rem;
-}
-
-.cursor-2 {
-  top: 10rem;
-  right: 1rem;
 }
 
 .skill-1 {
@@ -443,92 +405,113 @@ input:checked + .slider:before {
   color: #f3f3f1;
 }
 
-#card-7 .card-header {
-  position: relative;
-  height: 33%;
-}
-
-#card-7 .card-header img {
-  position: absolute;
-  top: 4rem;
-  right: 4rem;
-}
-
-#card-7 .card-header {
+.skill-7 .card-notation {
   color: #f3f3f1;
-  font-weight: 500;
 }
 
-#card-7 .card-body {
-  font-size: 40px;
-  font-weight: 600;
-  line-height: 48px;
+.skill-7 .card-description {
   display: flex;
   flex-direction: column;
-  height: 33%;
+  justify-content: center;
+  margin-top: 0;
+  font-size: 40px;
+  margin-top: 5rem;
 }
 
-#card-7 .card-body span {
-  font-weight: 600;
-}
-
-.a {
+.span {
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
 
-#card-7 .card-footer {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 33%;
+.pappate {
+  position: absolute;
+  top: 0;
+  left: 2rem;
 }
 
-#card-7 .card-footer img {
-  border-radius: 0;
+.card-button {
+  display: flex;
+  justify-content: center;
 }
 
 .button {
-  position: relative;
-  cursor: pointer;
-  background-color: #f3f3f1;
-  color: #262625;
-  border-radius: 30px;
-  font-weight: 600;
-  font-size: 13.67px;
-  line-height: 14px;
-  border: none;
-  width: 178px;
-  height: 58px;
-  z-index: 1;
+  padding: 1.5rem 2rem;
+  border-radius: 60px;
+  font-weight: 500;
 }
 
-.button:hover,
-.button-:focus {
-  background-color: #ffffff;
+.cursor-1 {
+  top: 5%;
+  right: 1rem;
 }
 
-.v1 {
+.cursor-2 {
+  top: 10rem;
+  right: 1rem;
+}
+
+.card-sticker {
   position: absolute;
-  top: 3.9rem;
-  left: 86px;
-  z-index: 2;
+  bottom: 0;
+  right: 0;
 }
 
-.v2 {
-  position: absolute;
-  top: 2.2rem;
-  left: 230px;
-  z-index: 0;
-}
+@media (min-width: 768px) {
+  .cards-container {
+    height: 600px;
+  }
 
-.v3 {
-  position: absolute;
-  top: 7rem;
-  left: 225px;
-  z-index: 2;
-} */
+  .card {
+    max-width: 960px;
+  }
+
+  .card-content {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2rem;
+  }
+
+  .card-image-container {
+    width: 70%;
+  }
+
+  .card-image {
+    width: 100%;
+    height: auto;
+  }
+
+  .card-description {
+    width: 30%;
+    margin-top: 2rem;
+    margin-left: 1.5rem;
+    padding-right: 3rem;
+  }
+
+  .card-text {
+    text-align: left;
+  }
+
+  .card-text:first-child {
+    margin-bottom: 1rem;
+  }
+
+  .card-sticker {
+    width: 310px;
+  }
+
+  .card-cursor-1 {
+    position: absolute;
+    top: 1rem;
+    right: 9rem;
+  }
+
+  .card-cursor-2 {
+    position: absolute;
+    top: 1rem;
+    right: 4rem;
+  }
+}
 
 .footer {
   margin-top: 2rem;
@@ -563,52 +546,6 @@ input:checked + .slider:before {
   .wrapper {
     margin: 0;
   }
-
-  /* .cards-container {
-    width: 100%;
-    height: 460px;
-  }
-
-  .card {
-    width: 100%;
-    height: 460px;
-  }
-
-  .card-header {
-    margin-left: 2.5rem;
-  }
-
-  .card-header h5 {
-    margin-left: 3rem;
-  }
-
-  .card-body {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-  }
-
-  .img-body {
-    grid-area: 1 / 1 / 3 / 3;
-    margin: 0 1rem;
-  }
-  .text-body {
-    grid-area: 1 / 3 / 3 / 4;
-  }
-
-  .card-footer {
-    width: 100%;
-    overflow: hidden;
-  }
-
-  .card-footer img {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    border-radius: 0 0 60px 0;
-  } */
 }
 
 @media screen and (min-width: 1024px) {
